# rbe_repos.bzl

./: MODULE.bazel  rbe_repos.bzl  remote_repos.bzl
examples/: .bazelrc  .bazelversion  MODULE.bazel  README.md  jdk.BUILD
examples/src/: BUILD.bazel
examples/src/main/java/com/example/: BUILD.bazel  Greeting.java  Main.java
examples/toolchains/: BUILD.bazel
internal/: glob.bzl  http_archive.bzl
